{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 143,
  "lineage": "8eb9f5cf-5ff3-9281-5b39-10e773e4e615",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668178594937:loadbalancer/app/tf-alb/9d5df6d99cf35de1",
            "arn_suffix": "app/tf-alb/9d5df6d99cf35de1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-alb-805054103.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:668178594937:loadbalancer/app/tf-alb/9d5df6d99cf35de1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0165eceab7a56c913"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0745a99890a46b6af"
              },
              {
                "subnet_id": "subnet-0b718b728302583aa"
              }
            ],
            "subnets": [
              "subnet-0745a99890a46b6af",
              "subnet-0b718b728302583aa"
            ],
            "tags": {
              "Name": "Coalfire-ALB"
            },
            "tags_all": {
              "Name": "Coalfire-ALB"
            },
            "vpc_id": "vpc-076534db105338e17",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668178594937:loadbalancer/app/tf-alb/9d5df6d99cf35de1"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668178594937:targetgroup/tf-alb-tg/5fca451bbcf408a1",
            "arn_suffix": "targetgroup/tf-alb-tg/5fca451bbcf408a1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:668178594937:targetgroup/tf-alb-tg/5fca451bbcf408a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-alb-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Coalfire ALB Target"
            },
            "tags_all": {
              "Name": "Coalfire ALB Target"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668178594937:targetgroup/tf-alb-tg/5fca451bbcf408a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:security-group/sg-0165eceab7a56c913",
            "description": "Allow HTTPS from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0165eceab7a56c913",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "668178594937",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-Security-Group"
            },
            "tags_all": {
              "Name": "ALB-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-076534db105338e17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "sg-0165eceab7a56c913",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:security-group/sg-0b82176830a86568a",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b82176830a86568a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0165eceab7a56c913"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg-sg",
            "name_prefix": "",
            "owner_id": "668178594937",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-ASG-Security-Group"
            },
            "tags_all": {
              "Name": "EC2-ASG-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-076534db105338e17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "sg-0b82176830a86568a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:security-group/sg-099c152cb9040d7bc",
            "description": "Allow traffic from ASG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099c152cb9040d7bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b82176830a86568a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "668178594937",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-Security-Group"
            },
            "tags_all": {
              "Name": "RDS-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-076534db105338e17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "sg-099c152cb9040d7bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.asg_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:route-table/rtb-06797be5cce827158",
            "id": "rtb-06797be5cce827158",
            "owner_id": "668178594937",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-076534db105338e17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "rtb-06797be5cce827158",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d5933b404f08bb8",
            "region": "us-east-1",
            "route_table_id": "rtb-06797be5cce827158",
            "subnet_id": "subnet-0745a99890a46b6af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aec9df902c518719",
            "region": "us-east-1",
            "route_table_id": "rtb-06797be5cce827158",
            "subnet_id": "subnet-0b718b728302583aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:subnet/subnet-029989cd2b99195aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029989cd2b99195aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668178594937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "db-us-east-1a"
            },
            "tags_all": {
              "Name": "db-us-east-1a"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "subnet-029989cd2b99195aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:subnet/subnet-00adbd3eef4b03169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00adbd3eef4b03169",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668178594937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "db-us-east-1b"
            },
            "tags_all": {
              "Name": "db-us-east-1b"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "subnet-00adbd3eef4b03169",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:subnet/subnet-0745a99890a46b6af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0745a99890a46b6af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668178594937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "subnet-0745a99890a46b6af",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:subnet/subnet-0b718b728302583aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b718b728302583aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668178594937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "subnet-0b718b728302583aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:subnet/subnet-057e4fc6212a0c242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e4fc6212a0c242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668178594937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wp-us-east-1a"
            },
            "tags_all": {
              "Name": "wp-us-east-1a"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "subnet-057e4fc6212a0c242",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:subnet/subnet-04dac6f6335a11898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dac6f6335a11898",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668178594937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wp-us-east-1b"
            },
            "tags_all": {
              "Name": "wp-us-east-1b"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "668178594937",
            "id": "subnet-04dac6f6335a11898",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:internet-gateway/igw-07f4f269a55a17a05",
            "id": "igw-07f4f269a55a17a05",
            "owner_id": "668178594937",
            "region": "us-east-1",
            "tags": {
              "Name": "CF-Gateway"
            },
            "tags_all": {
              "Name": "CF-Gateway"
            },
            "vpc_id": "vpc-076534db105338e17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668178594937:vpc/vpc-076534db105338e17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f70f805c13fe03fc",
            "default_route_table_id": "rtb-0548add9fb210ce51",
            "default_security_group_id": "sg-01d9bdd20200dcfca",
            "dhcp_options_id": "dopt-4c6d5836",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076534db105338e17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0548add9fb210ce51",
            "owner_id": "668178594937",
            "region": "us-east-1",
            "tags": {
              "Name": "CoalFire-VPC"
            },
            "tags_all": {
              "Name": "CoalFire-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}